# picture2

./: .gitignore  vercel.json
web-platform/: .gitignore  交接说明.txt
web-platform/backend/: .env.example  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-supabase.txt  requirements.txt
web-platform/backend/app/: main.py
web-platform/backend/app/api/: deps.py  routes.py
web-platform/backend/app/api/endpoints/: health.py
web-platform/backend/app/api/endpoints/admin/: __init__.py  routes.py
web-platform/backend/app/api/endpoints/assets/: __init__.py  routes.py
web-platform/backend/app/api/endpoints/auth/: __init__.py  routes.py
web-platform/backend/app/api/endpoints/tasks/: __init__.py  routes.py
web-platform/backend/app/api/endpoints/tenants/: __init__.py  routes.py
web-platform/backend/app/api/endpoints/uploads/: __init__.py  routes.py
web-platform/backend/app/core/: config.py  logging.py  security.py
web-platform/backend/app/db/: __init__.py  session.py
web-platform/backend/app/models/: __init__.py  base.py  image_asset.py  label_template.py  processing_task.py  tenant.py  user.py
web-platform/backend/app/schemas/: __init__.py  asset.py  auth.py  provisioning.py  task.py  tenant.py  upload.py
web-platform/backend/app/scripts/: init_admin.py  smoke_test.py
web-platform/backend/app/services/: config_loader.py  processor.py  tasks.py
web-platform/backend/app/services/provisioning/: service.py
web-platform/backend/app/services/vercel/: client.py
web-platform/backend/tests/: test_processor.py
(+32 files in other folders)
